--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
             color: white;
             background-color:#ff0000;
             margin:20px;
+	       font-style:italic;
+	       
         }
         li:hover{background-color:black;}
         li:active{background-color:silver;}
 	</style>
 </head>
 <body style="background-color:#222222;">
-	<h1 style="color:gold;font-family: verdana;font-size:20px;text-align: center;">MY FIRST FRONT END</h1>
+	<h1 style="color:gold;font-style:italic;font-size:60px;text-align: center;"><b><u>MY FIRST FRONT END</u></b></h1>
 	<ul style="list-style-type:none;width:100%;";>
       	<a href="http://pw.live"><li>Home</li></a>
       	<li>Job</li>
