--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             background-color:#ff0000;
             margin:20px;
 	       font-style:italic;
+	       font-size:30px;
 	       
         }
         li:hover{background-color:black;}
