--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
       	<li>Health</li>
       	<li>Bills</li>
       </ul>
+	<a href="https://www.linkedin.com/in/srinathpuligari">
+      <img src="https://cdn.iconscout.com/icon/free/png-512/free-linkedin-1464529-1239440.png?f=avif&w=256" alt="linkedin" style="float:center;"></a>
+
 </body>
 </html>
