--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </ul>
 	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><hr>
 	<a href="https://www.linkedin.com/in/srinathpuligari">
-      <img src="https://cdn.iconscout.com/icon/free/png-512/free-linkedin-1464529-1239440.png?f=avif&w=256" alt="linkedin" style="float:center;"></a>
+      <img src="https://cdn.iconscout.com/icon/free/png-512/free-linkedin-1464529-1239440.png?f=avif&w=256" alt="linkedin" style="float:center;width:100px;height:100px"></a>
 
 </body>
 </html>
