--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
       	<li>Health</li>
       	<li>Bills</li>
       </ul>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><hr>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b
+	<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b
+	<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<hr><center>
 	<a href="https://www.linkedin.com/in/srinathpuligari">
       <img src="https://cdn.iconscout.com/icon/free/png-512/free-linkedin-1464529-1239440.png?f=avif&w=256" alt="linkedin" style="float:center;width:100px;height:100px"></a>
-
+</center>
 </body>
 </html>
