--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       	<li>Health</li>
       	<li>Bills</li>
       </ul>
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b
-	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><b><br>
-	<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<hr><center>
+	<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b
+	<br><br><br><b><br>
+	<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<br><br><br><br><br><br><br><br><br><br><br><br><b<hr><center>
 	<a href="https://www.linkedin.com/in/srinathpuligari">
       <img src="https://www.pngkit.com/png/detail/96-969835_linkedin-icon.png" alt="linkedin" style="float:center;width:100px;height:100px"></a>
 </center>
